# np_probe_targets

./: .gitignore  README.md  dr_probe_targets.ipynb  example-record.json  implant.ipynb  implant_drawing.py  insertion.json  pyproject.toml  test.json  widgets.py
.github/workflows/: publish.yml
.ipynb_checkpoints/: dr_probe_targets-checkpoint.ipynb  implant-checkpoint.ipynb
examples/: example-usage.html  example-usage.ipynb
src/np_probe_targets/: __init__.py  implant.ipynb  implant_drawing.py  insertions.py  shields.py  types.py  widgets.py
src/npc_shields/: __init__.py  injections.py  insertions.py  shields.py  types.py  widgets.py
src/npc_shields/hole_coordinates/: 2001.csv  2014.csv
