[project]
name = "np_probe_targets"
version = "0.0.1"
description = "Tools for Neuropixels probe insertion: providing suggested targets, recording actual insertions, storing notes."
authors = [
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "ipywidgets>=8.0.6",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
includes = ["src/np_probe_targets"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"