[project]
name = "np_probe_targets"
version = "0.0.9"
description = "Tools for Neuropixels probe insertion: providing suggested targets, recording actual insertions, storing notes."
authors = [
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "ipywidgets<8",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.pdm.build]
includes = ["src/np_probe_targets"]

[project.urls]
Repository = "https://github.com/AllenInstitute/np_probe_targets"
Issues = "https://github.com/AllenInstitute/np_probe_targets/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"