[project]
name = "np_probe_targets"
version = "0.0.11"
description = "Tools for Neuropixels probe insertion: providing suggested targets, recording actual insertions, storing notes."
authors = [
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
]
dependencies = [
    "ipywidgets>=7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
[project.optional-dependencies]
dev = [
    "bump>=1.3.2",
]

[tool.pdm.build]
includes = ["src/np_probe_targets"]

[tool.pdm.scripts]
# usage: pdm run <script> [args]
ruff = "ruff check src --fix-only"
blue = "blue src"
pytest = "pytest --cov"
prebuild = {composite = ["blue", "ruff", "pytest"]}
bump = "bump -p pyproject.toml" # defaults to patch; `pdm run bump -m` to bump minor
build = {composite = ["prebuild", "pdm build"]}
dry-run = {composite = ["prebuild", "pdm build", "pdm publish --no-build --repository https://test.pypi.org/simple"]}
publish = {composite = ["prebuild", "pdm build", "pdm publish --no-build"]}
pub = {composite = ["bump", "pdm publish"]}

[project.urls]
Repository = "https://github.com/AllenInstitute/np_probe_targets"
Issues = "https://github.com/AllenInstitute/np_probe_targets/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"